--- a/Kontakt.html
+++ b/Kontakt.html
@@ -8,11 +8,11 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<title>Autohaus</title>
 </head>
-<a href="Autohaus.html">
+<a href="index.html">
 	<img id="Logo" src="Bilder/Logo.png" alt="Autohaus_Logo" width="" height="">
 </a>
 <div id="headerLinks">
-		<a href="Autohaus.html" title="Home">Home</a>
+		<a href="index.html" title="Home">Home</a>
 	    <a href="Kontakt.html" title="Kontakt">Kontakt</a>
     	<a href="Impressum.html" title="Impressum.html">Impressum</a>
 </div>
