--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	
 	<title>Autohaus</title>
 </head>
-<a href="Autohaus.html">
+<a href="index.html">
 	<img id="Logo" src="Bilder/Logo.png" alt="Autohaus_Logo" width="" height="">
 </a>
 <div id="headerLinks">
-		<a href="Autohaus.html" title="Home">Home</a>
+		<a href="index.html" title="Home">Home</a>
 	    <a href="Kontakt.html" title="Kontakt">Kontakt</a>
     	<a href="Impressum.html" title="Impressum.html">Impressum</a>
 </div>
