--- a/Impressum.html
+++ b/Impressum.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="CSS/reset.css">
 	<link rel="stylesheet" href="CSS/style.css">
 	
-	<title>Autohaus</title>
+	<title>index</title>
 </head>
 <a href="index.html">
 	<img id="Logo" src="Bilder/Logo.png" alt="Autohaus_Logo" width="" height="">
