--- a/Kontakt.html
+++ b/Kontakt.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="CSS/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-	<title>index</title>
+	<title>Kontakt</title>
 </head>
 <a href="index.html">
 	<img id="Logo" src="Bilder/Logo.png" alt="Autohaus_Logo" width="" height="">
