censored Confidential information

--- a/Impressum.html
+++ b/Impressum.html
@@ -29,28 +29,28 @@
 		<div id="Impressum_Daten">
 			<p class="Titel"><span style="color: #ED0000">Anbieter</span></p><br>
 			<p>Autohaus MR</p><br>
-			<p>Liliencronstraße 48</p><br>
-			<p>22149 Hamburg</p><br>
+			<p>#######straße 48</p><br>
+			<p>###### Hamburg</p><br>
 			<p>Deutschland</p><br><br>
-			<p>Vorsitzender des Aufsichtsrats: Nävid Schulz<br>
-				Handelsregister beim Amtsgericht Stuttgart, Nr. HRB 762873<br>
-				Umsatzsteueridentifikationsnummer: DE 32 12 81 763<br>
-				Versicherungsvermittlerregister (www.vermittlerregister.info): Register-Nr. D-N5VM-4IM0N-23</p><br><br>
+			<p>Vorsitzender des Aufsichtsrats: ##### #####<br>
+				Handelsregister beim Amtsgericht #######, Nr. ### #######<br>
+				Umsatzsteueridentifikationsnummer: DE ## ## ## ###<br>
+				Versicherungsvermittlerregister (www.###########.info): Register-Nr. D-####-####-23</p><br><br>
 			<p>Erlaubnisbefreiung nach § 34d Abs. 3 GewO,<br>
-				Aufsichtsbehörde: IHK Stuttgart, Jägerstr. 30, www.ihk-hamburg.de<br>
-				Mitglied der Industrie- und Handelskammer Hamburg,Jägerstr. 30, 70174 Hamburg<br>
+				Aufsichtsbehörde: IHK #######, #######. 30, www.####-######.de<br>
+				Mitglied der Industrie- und Handelskammer Hamburg,######. 30, ###### Hamburg<br>
 				Berufsbezeichnung: Versicherungsvertreter mit Erlaubnis nach § 34d Abs.3 GewO;<br>
 				Bundesrepublik Deutschland<br>
 				Berufsrechtliche Regelungen:- § 34d Gewerbeordnung- §§ 59 - 68 VVG- VersVermV</p><br><br>
 			<p class="Titel"><span style="color: #ED0000">Kontakt</span></p><br>
 			<p>Autohaus MR</p><br>
 			<p>Niederlassung Hamburg</p><br>
-			<p>Liliencronstraße 48</p><br>
-			<p>22149</p><br>
+			<p>#######straße 48</p><br>
+			<p>#####</p><br>
 			<p>Hamburg</p><br>
 			<p>Tel.: 0176 123456789</p><br>
 			<p>Fax: 040 987654321</p><br>
-			<p>milat@gmail.com</p><br>
+			<p>#####@gmail.com</p><br>
 			<p>© Copyright Autohaus MR AG</p>
 			<p>Die berufsrechtlichen Regelungen können über die vom Bundesministerium der Justiz und von<br>
 				der juris GmbH betriebenen Homepage www.gesetze-im-internet.de eingesehen und abgerufen werden.<br>
@@ -71,7 +71,7 @@
 			<p>Powered by:<br>Anschrift:<br>Kontakt:<br>E-Mail:<br>Öffnungszeiten:</p>
     	</div>
     	<div>
-      		<p>Milat Raoufi<br>Liliencronstraße 48, 22149 Hamburg<br>0176 123456789<br>milat@gmail.com<br>Mo - Sa 08:00 - 21:00</p>
+      		<p>##### ######<br>######straße 48, ##### Hamburg<br>0176 123456789<br>####@gmail.com<br>Mo - Sa 08:00 - 21:00</p>
     	</div>
     	<div class="footerlinks">
       		<p><a href="https://www.auto-motor-und-sport.de/newsletter-bestellen/" title="Link">Newsletter</a></p>
