--- a/Kontakt.html
+++ b/Kontakt.html
@@ -30,18 +30,18 @@
 			<p class="Titel"><span style="color: #ED0000"><u>Ansprechpartner</u></span></p><br>
 			<p>Tel.: 0176 123456789</p><br>
 			<p>Fax: 040 987654321</p><br>
-			<p>milat@gmail.com</p>
+			<p>#####@gmail.com</p>
 		</div>
 		<div id="Oeffnungszeiten">
 			<p class="Titel"><span style="color: #ED0000"><u>Öffnungszeiten</u></span></p><br>
 			<p>Mo - Sa 08:00 - 21:00</p><br>
 			<p>So Geschlossen</p>
 		</div>
-			<iframe id="GoogleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2367.919073988913!2d10.158314351767368!3d53.59490557993395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b18b16c910836b%3A0xb1436270fa2f531a!2sLiliencronstra%C3%9Fe%2048%2C%2022149%20Hamburg!5e0!3m2!1sde!2sde!4v1615938919746!5m2!1sde!2sde" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+			<iframe id="GoogleMaps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2244703.1808174266!2d46.31890340582355!3d-20.3717558352603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sde!2sde!4v1689084595602!5m2!1sde!2sde" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 		<div id="Anschrift">
 			<p class="Titel"><span style="color: #ED0000"><u>Anschrift</u></span></p><br>
-			<p>Liliencronstraße 48</p><br>
-			<p>22149</p><br>
+			<p>########straße 48</p><br>
+			<p>#####</p><br>
 			<p>Hamburg</p><br>
 			<p>Germany</p>
 		</div>
@@ -63,10 +63,10 @@
 
 	<footer> 
     	<div>
-			<p>Powered by:<br>Anschrift:<br>Kontakt<br>E-Mail:<br>Öffnungszeiten:</p>
+			<p>Powered by:<br>Anschrift:<br>Kontakt:<br>E-Mail:<br>Öffnungszeiten:</p>
     	</div>
     	<div>
-      		<p>Milat Raoufi<br>Liliencronstraße 48, 22149 Hamburg<br>0176 123456789<br>milat@gmail.com<br>Mo - Sa 08:00 - 21:00</p>
+      		<p>##### ######<br>######straße 48, ##### Hamburg<br>0176 123456789<br>####@gmail.com<br>Mo - Sa 08:00 - 21:00</p>
     	</div>
     	<div class="footerlinks">
       		<p><a href="https://www.auto-motor-und-sport.de/newsletter-bestellen/" title="Link">Newsletter</a></p>
