--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			<p>Powered by:<br>Anschrift:<br>Kontakt:<br>E-Mail:<br>Öffnungszeiten:</p>
     	</div>
     	<div>
-      		<p>Milat Raoufi<br>Liliencronstraße 48, 22149 Hamburg<br>0176 123456789<br>milat@gmail.com<br>Mo - Sa 08:00 - 21:00</p>
+      		<p>##### ######<br>######straße 48, ##### Hamburg<br>0176 123456789<br>####@gmail.com<br>Mo - Sa 08:00 - 21:00</p>
     	</div>
     	<div class="footerlinks">
       		<p><a href="https://www.auto-motor-und-sport.de/newsletter-bestellen/" title="Link">Newsletter</a></p>
